# mouse_jerk

./: .gitignore  Makefile  README.rst  clicker.py  pyproject.toml  script.py  setup.cfg
auto_clicker/: script.py
mouse_jerk/: clicker.py  script.py
