[tool.poetry]
name = "mouse_jerk"
version = "0.4.2"
description = "Small app, that help your PC to not fall asleep."
authors = ["d.finko <dmit.finn@yandex.ru>"]
repository = "https://github.com/gstr169/mouse_jerk"
packages = [
    { include = "mouse_jerk" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console"
]

[tool.poetry.dependencies]
python = "^3.8.5"
pynput = "^1.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]
mouse-jerk = "mouse_jerk.script:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
